<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.douzaer.uicontrols.MainActivity">
    <Button
        android:id="@+id/Button01"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/Button01"
        android:onClick="Button01Click">
    </Button>
    <Button
        android:id="@+id/Button02"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/Button02"
        android:onClick="Button02Click">
    </Button>
    <Button
        android:id="@+id/Button03"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/Button03"
        android:onClick="Button03Click">
    </Button>
    <Button
        android:id="@+id/Button04"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/Button04"
        android:onClick="Button04Click">
    </Button>
</LinearLayout>
